spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,5 @@ main {
   padding: 25px;
   border-radius: 10px;
   margin-top: 40px;
+  margin-bottom: 40px;
 }
